# puugit

./: CLAUDE.md  Cargo.toml
crates/puugit-core/: Cargo.toml
crates/puugit-core/src/: error.rs  lib.rs  ssh_config.rs
crates/puugit-core/src/config/: local.rs  mod.rs  repos.rs  resolve.rs
crates/puugit-core/src/git_ops/: clone.rs  disk_usage.rs  mod.rs  remove.rs  sync.rs
crates/puugit-core/src/repo_status/: mod.rs  status.rs
crates/puugit-gui/: Cargo.toml  build.rs
crates/puugit-gui/src/: account_view.rs  add_repo_dialog.rs  app.rs  dialog.rs  main.rs  side_panel.rs  subscription_view.rs  tree_view.rs
