[package]
name = "puugit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
thiserror = "1"
git2 = { version = "0.19", features = ["vendored-libgit2"] }

[target.'cfg(windows)'.dependencies]
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3"
