[package]
name = "puugit-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "puugit"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"

[dependencies]
eframe = "0.27"
egui = "0.27"
image = { version = "0.25", default-features = false, features = ["png"] }
puugit-core = { path = "../puugit-core" }
